Remove openam configs